@@ -254,6 +254,10 @@ class tx_solr_Search implements t3lib_Singleton {
 
 		$facetQueries = get_object_vars($this->getFacetCounts()->facet_queries);
 		foreach ($facetQueries as $facetQuery => $numberOfResults) {
+				// remove tags from the facet.query response, for facet.field
+				// and facet.range Solr does that on its own automatically
+			$facetQuery = preg_replace('/^\{!ex=.*\}(.*)/', '\\1', $facetQuery);
+
 			if (t3lib_div::isFirstPartOfStr($facetQuery, $facetField)) {
 				$options[$facetQuery] = $numberOfResults;
 			}
