@@ -82,6 +82,7 @@
 	* Added tx_solr_Query->getKeywordsCleaned()
 	* Added feature to search using the spell checker suggestions when no results were found for the original query
 	* Added option tx_solr.search.spellchecking.searchUsingSpellChekerSuggestion
+	* Added support for keepAllOptionsOnSelection with facet queries
 
 2012-07-20  Stefan Sprenger  <stefan.sprenger@dkd.de>
 
